--- a/public/admin/config copy.yml
+++ b/public/admin/config copy.yml
@@ -1,7 +1,6 @@
 backend:
-    name: github
-    repo: castrolol/rcf-portal 
-    branch: master
+  name: git-gateway
+  branch: master
 media_folder: public/images
 public_folder: /images
 publish_mode: editorial_workflow
